# LongQt

./: .gitignore  .gitmodules  .qmake.stash  .readthedocs.yaml  CMakeLists.txt  LICENSE  LQGridEditor.pro  LongQt.ai  LongQt.cpp  LongQt.pro  LongQt.qrc  LongQt.rc  LongQtGrapher.cpp  LongQtGrapher.pro  LongQtGrapher.qrc  LongQtIcon.ai  LongQtIcon.icns  Makefile  MyConcurrentModel.pro  MyConcurrentModel.pro.user.2c77c89  MyConcurrentModel.pro.user.a990d17  MyConcurrentModel.pro.user.cb2c28f  MyConcurrentModel.pro.user.e2b2dd7  README  README.md  appparser.cpp  appparser.h  bargraph.cpp  bargraph.h  bargraph.ui  chooseProtoWidget.cpp  chooseProtoWidget.h  choosegraphs.cpp  choosegraphs.ui  choosegraphstoggle.cpp  choosegraphstoggle.h  design.md  dialog.cpp  dialog.cpp.autosave  dialog.h  (+22 more)
.github/workflows/: build.yml
Grapher/: Grapher.pri  bargraph.cpp  bargraph.h  bargraph.ui  choosegraphs.h  choosegraphs.ui  choosegraphstoggle.h  graph.cpp  graph.h  graph.ui  labelaxisticker.cpp  linegraph.cpp  linegraph.h  linegraph.ui  loadingprogress.cpp  loadingprogress.h  loadingprogress.ui
GridEditor/: GridEdit.pri  LQGridEditor.cpp  LQGridEditor.h  LQGridEditor_old.cpp  LQGridEditor_old.h  addgridcellpvar.cpp  addgridcellpvar.h  conductivityeditor.cpp  conductivityeditor.h  conductivityeditor.ui  gridDelegate.cpp  gridDelegate.h  gridModel.cpp  gridModel.h  gridSettup.cpp  gridSettup.h  gridsetupwidget.cpp  gridsetupwidget.h  gridsetupwidget.ui  ionchannelconfig.cpp  ionchannelconfig.h  ionchannelconfig.ui  lqgrideditor.cpp  lqgrideditor.h  lqgrideditor.ui  main.cpp  setsecondstim.ui
LongQtMain/: CLISimulation.cpp  CLISimulation.h  LongQtMain.pri  addsinglecellpvar.cpp  addsinglecellpvar.h  addsinglecellpvar.ui  appparser.cpp  appparser.h  chooseProtoWidget.cpp  chooseprotowidget.cpp  chooseprotowidget.h  chooseprotowidget.ui  dvarmenu.cpp  dvarmenu.h  heart_cell_sim.cpp  heart_cell_sim.h  heartcellsim.cpp  heartcellsim.h  mvarmenu.cpp  mvarmenu.h  mvarmenu.ui  pvarmenu.cpp  pvarmenu.h  pvarmenu.ui  runWidget.cpp  runWidget.h  runwidget.cpp  runwidget.h  runwidget.ui  simvar.cpp  simvarmenu.cpp  simvarmenu.h  simvarmenu_old.cpp  simvarmenu_old.h  simvbool.cpp  simvcell.cpp  simvcell.h  simvcellopts.cpp  simvcellopts.h  simvdir.cpp  (+5 more)
MyConcurrentModel.app/Contents/: Info.plist
cli/: CLISimulation.cpp  CLISimulation.h
doc/: conf.py  index.rst  make.bat  test.md
docs/: AddingModels.md  Downloading.md  Getting.md  Introduction.md  LongQTGrapher.md  LongQTMenus.md  Models.md  PrefaceandScope.md  appendix.md  index.md  test.md
gui/: guiUtils.h
gui/graph/: bargraph.h  choosegraphstoggle.ui  graph.cpp  linegraph.cpp  linegraph.h  loadingprogress.cpp  loadingprogress.h  loadingprogress.ui
gui/simulaiton/: chooseProtoWidget.cpp  chooseProtoWidget.h  gridSettup.cpp  gridSettup.h  heart_cell_sim.cpp  runWidget.cpp  runWidget.h  varmenu.cpp  varmenu.h
hoverText/: cellParsDesc.json  cellVarsDesc.json  dvarsDescriptions.json  dvarsDescriptions.txt  dvarsUnits.json  dvarsUnits.txt  measDesc.json  measDescriptions.json  measDescriptions.txt  parsDescriptions.json  parsDescriptions.txt  pvarsDescriptions.json  pvarsDescriptions.txt  simvarsDesc.json  simvarsNames.json
lib/: argHandler.cpp  argHandler.h
menu_object/: choose_proto_menu_object.cpp  dvars_menu_object.cpp  graph_menu_object.cpp  menu_object.h  mvars_menu_object.cpp  pvars_menu_object.cpp  run_menu_object.cpp  simvars_menu_object.cpp
modellib/: CurrentClampProtocol.cpp  CurrentClampProtocol.h  SimManager.cpp  SimManager.h  TrialWorker.cpp  TrialWorker.h  cell.cpp  cell.h  cellGrid.h  cellUtils.h  cell_kernel.cpp  cell_kernel.h  cellpvars.cpp  cellpvars.h  cellutils.cpp  cellutils.h  currentClampProtocol.cpp  currentClampProtocol.h  fiber.cpp  fiber.h  gpbatrial.cpp  gpbatrial.h  gpbatrialRyr.cc  gpbatrialRyr.cpp  gpbatrialRyr.h  grid.cpp  grid.h  gridCell.cpp  gridCell.h  gridProtocol.cpp  gridProtocol.h  gridmeasuremanager.cpp  gridmeasuremanager.h  hrd09.cc  hrd09.cpp  hrd09.h  hrd09_bz.cc  hrd09_bz.cpp  iobase.cpp  iobase.h  (+34 more)
modellib/cell/: FR.cpp  FR.h  OHaraRudy.cpp  OHaraRudy.h  OHaraRudyEndo.cpp  OHaraRudyEndo.h  OHaraRudyEpi.cpp  OHaraRudyEpi.h  OHaraRudyM.cpp  OHaraRudyM.h  atrial.cpp  atrial.h  br04.cpp  br04.h  cell.cpp  cell.h  cell_kernel.cpp  cell_kernel.h  faber.c  gpbatrial.cpp  gpbatrial.h  gpbatrialRyr.cc  gpbatrialRyr.cpp  gpbatrialRyr.h  gpbatrialSE.cpp  gpbatrialSE.h  gpbatrialWT.cpp  gpbatrialWT.h  gpbatrialonal17.cc  gpbatrialonal17.h  gpbhuman.cpp  gpbhuman.h  gridCell.cpp  gridCell.h  hrd09.cpp  hrd09.h  hrd09_bz.cpp  inexcitablecell.cpp  inexcitablecell.h  ksan.cpp  (+5 more)
modellib/protocol/: currentClampProtocol.cpp  currentClampProtocol.h  gridProtocol.cpp  gridProtocol.h  protocol.cpp  protocol.h  voltageClampProtocol.cpp  voltageClampProtocol.h
modellib/structure/: fiber.cpp  fiber.h  grid.cpp  grid.h  node.cpp  node.h
src/: LQGridEditorMain.cpp  LongQt.cpp  LongQtGrapher.cpp  Utils.cmake  Utils.pri  guiUtils.h  runsimwatcher.cpp  runsimwatcher.h
src/Grapher/: Grapher.cmake  Grapher.pri  bargraph.cpp  bargraph.h  choosegraphs.cpp  choosegraphs.h  choosegraphs.ui  choosegraphstoggle.cpp  choosegraphstoggle.h  graph.cpp  graph.h  graph.ui  labelaxisticker.cpp  labelaxisticker.h  linegraph.cpp  linegraph.h  linegraph.ui  loadingprogress.cpp  loadingprogress.h  loadingprogress.ui  ordinalspinbox.cpp  ordinalspinbox.h
src/GridEditor/: GridEdit.pri  GridEditor.cmake  LQGridEditor_old.h  addgridcellpvar.cpp  addgridcellpvar.h  addgridcellpvar.ui  conductivityeditor.cpp  conductivityeditor.h  gridDelegate.cpp  gridDelegate.h  gridModel.cpp  gridModel.h  gridsetupwidget.cpp  gridsetupwidget.h  gridsetupwidget.ui  ionchannelconfig.cpp  ionchannelconfig.h  ionchannelconfig.ui  ionchannelconfig.ui_old  lqgrideditor.cpp  lqgrideditor.h  lqgrideditor.ui  setsecondstim.cpp  setsecondstim.h
src/LongQtMain/: CLISimulation.cpp  CLISimulation.h  LongQtMain.cmake  LongQtMain.pri  addsinglecellpvar.cpp  addsinglecellpvar.h  appparser.cpp  appparser.h  simvar.h  (+59 more)
tests/: checkJsonContainsAll.py  printEmptyJson.py
(+36 files in other folders)
